[gd_scene load_steps=16 format=3 uid="uid://cfv1k3pc4w8dp"]

[ext_resource type="Script" path="res://interface/pause_menu/pause_menu.gd" id="1_jp263"]
[ext_resource type="FontFile" uid="uid://cxu2vtaotchpf" path="res://interface/fonts/scrawl/nsj_12.ttf" id="5_amm44"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2xvmv"]
load_path = "res://.godot/imported/left_banner_piece.png-8f2b58f95ebbdcb8b82b846bf3ab43d5.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4l45n"]
load_path = "res://.godot/imported/middle_banner_piece.png-9db7754ca3933c9c66bf98e242d493da.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ohlql"]
load_path = "res://.godot/imported/right_banner_piece.png-944af1449dad14c30e8f85b9af41e7b1.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_fi0j0"]
line_spacing = 1.0
font = ExtResource("5_amm44")
font_size = 48
outline_color = Color(0.151276, 0.151276, 0.151276, 1)
shadow_color = Color(4.62055e-06, 0.608312, 0.753844, 1)
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i03v5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gx0t2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_51pxv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u13qj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ks1sb"]

[sub_resource type="LabelSettings" id="LabelSettings_53ebx"]
font = ExtResource("5_amm44")
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_h5cpt"]
font = ExtResource("5_amm44")
font_size = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ydymk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l0ask"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_jp263")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 1.0
offset_right = 640.0
offset_bottom = 361.0
color = Color(0, 0, 0, 0.415686)

[node name="Banner" type="Node2D" parent="."]
position = Vector2(653, 10)

[node name="TextureRect" type="TextureRect" parent="Banner"]
offset_right = 23.0
offset_bottom = 17.0
texture = SubResource("CompressedTexture2D_2xvmv")

[node name="TextureRect2" type="TextureRect" parent="Banner"]
offset_left = 23.0
offset_right = 55.0
offset_bottom = 12.0
texture = SubResource("CompressedTexture2D_4l45n")

[node name="TextureRect3" type="TextureRect" parent="Banner"]
offset_left = 55.0
offset_right = 78.0
offset_bottom = 17.0
texture = SubResource("CompressedTexture2D_ohlql")

[node name="PauseTitle" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -119.0
offset_top = 84.0
offset_right = 120.0
offset_bottom = 133.0
grow_horizontal = 2
text = "PAUSADO"
label_settings = SubResource("LabelSettings_fi0j0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -35.5
offset_right = 80.0
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.61339, 0.61339, 0.61339, 1)
theme_override_colors/font_pressed_color = Color(0.206035, 0.434082, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_amm44")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_i03v5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gx0t2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_51pxv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_u13qj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ks1sb")
text = "Continuar"
flat = true

[node name="Shadow" type="Label" parent="ButtonsContainer/Resume"]
show_behind_parent = true
layout_mode = 2
offset_top = 9.0
offset_right = 160.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
text = "Continuar"
label_settings = SubResource("LabelSettings_53ebx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.61339, 0.61339, 0.61339, 1)
theme_override_colors/font_pressed_color = Color(0.206035, 0.434082, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_amm44")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_i03v5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gx0t2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_51pxv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_u13qj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ks1sb")
text = "Sair"
flat = true

[node name="Shadow" type="Label" parent="ButtonsContainer/Quit"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
text = "Sair"
label_settings = SubResource("LabelSettings_53ebx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="Label" parent="."]
offset_left = 257.0
offset_top = 237.0
offset_right = 417.0
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2
text = "  Música"
label_settings = SubResource("LabelSettings_h5cpt")
vertical_alignment = 1

[node name="MusicButton" type="CheckButton" parent="Music"]
layout_mode = 2
offset_left = -78.0
offset_top = 18.5
offset_right = 82.0
offset_bottom = 49.5
theme_override_styles/focus = SubResource("StyleBoxEmpty_ydymk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_l0ask")
text = "
"
flat = true
icon_alignment = 2

[node name="Shadow" type="Label" parent="Music"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 1.5
offset_right = -43.0
offset_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2
text = "Música"
label_settings = SubResource("LabelSettings_53ebx")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ButtonsContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ButtonsContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="Music/MusicButton" to="." method="_on_music_button_toggled"]
